# verifacts-backend

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  agent_2.py  pyproject.toml  requirements.txt
agent3/: config.py  fact_checker.py  main.py  models.py  requirements.txt
app/api/: main.py
app/api/v1/: endpoints.py  models.py
app/core/: cache.py  config.py  models.py
app/services/: llm_wrapper.py  orchestrator.py  shared_tools.py
app/services/claims/: agent.py  tools.py
app/services/fact_checker/: agent.py  tools.py
app/services/identify/: agent.py  tools.py
app/services/search_enrichment/: agent.py  tools.py
tests/: evaluation.py  test_api.py
