[project]
name = "verifacts-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Testimony Adekoya"}
]
readme = "README.md"
requires-python = ">=3.14, <4.0.0"
dependencies = [
    "langchain-core (>=1.1.0,<2.0.0)",
    "langchain-community (>=0.4.1,<0.5.0)",
    "fastapi (>=0.121.3,<0.122.0)",
    "uvicorn[standard] (>=0.38.0,<0.39.0)",
    "pydantic (>=2.12.4,<3.0.0)",
    "sqlalchemy (>=2.0.44,<3.0.0)",
    "redis (>=7.1.0,<8.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "langgraph (>=1.0.3,<2.0.0)",
    "langchain-google-genai (>=3.1.0,<4.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "pytest (>=9.0.1,<10.0.0)",
    "python-whois (>=0.9.6,<0.10.0)",
    "tldextract (>=5.3.0,<6.0.0)",
    "firecrawl (>=4.9.0,<5.0.0)",
    "resend (>=2.19.0,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
